# sourcecode

./: -o  .continue-here.md  .gitignore  .ruff.toml  AUDIT-REPORT.md  AUDIT_REAL_REPOS.md  AUDIT_v1.31.23.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_cli.py
.github/workflows/: build-windows.yml
.planning/: .continue-here.md  HANDOFF.json  ROADMAP.md  STATE.md
.sourcecode-cache/: snapshot-3b5997a-fa5c742c.json
docs/: MANUAL-USUARIO.md  PRODUCT_TIERS.md  USER_GUIDE.md  privacy.md  schema.md  spring-audit-ci.yml
docs/eval/: 2026-06-15-petclinic-rest-issue11-vets-pagination.md  2026-06-15-petclinic-rest-issue147-validation.md  2026-06-15-petclinic-rest-workflow.md  2026-06-15-phase18-openapi-surface.md  2026-06-15-phase20-validation-surface.md  2026-06-16-broadleaf-checkout-impact-fieldtest.md  (+2 more)
scripts/: generate_jdk_exports.py
src/sourcecode/: cache.py  (+69 more)
tests/: conftest.py  test_architecture_analyzer.py  test_architecture_summary.py  test_ast_extractor.py  test_audit_fixes.py  test_audit_fixes_v145.py  test_audit_sas_v2.py  test_block1_reliability.py  test_block2_coverage.py  test_block5_quality.py  test_broadleaf_fixes.py  test_bug_fixes_v1302.py  test_bug_fixes_v13115.py  test_bug_fixes_v1312.py  test_bug_fixes_v13122.py  test_bug_fixes_v1313.py  test_bug_fixes_v13130.py  test_bug_fixes_v1321.py  test_bug_fixes_v13311.py  test_bug_fixes_v13312.py  test_bug_fixes_v13313.py  test_bug_fixes_v13528.py  test_bug_fixes_v13533.py  test_bug_fixes_v16.py  test_bug_fixes_v2.py  test_cache.py  test_cache_cli.py  test_canonical_ir.py  test_cir_graphs.py  test_classifier.py  test_cli.py  test_code_notes_analyzer.py  test_context_graph.py  test_context_scorer.py  test_contextgraph_baseline.py  test_contract_pipeline.py  test_coverage_parser.py  test_cross_consistency.py  test_custom_security.py  test_dependency_analyzer_node_python.py  (+98 more)
(+119 files in other folders)
