[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sourcecode"
version = "0.43.0"
description = "Deterministic codebase context for AI coding agents"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["ai", "llm", "agents", "context", "codebase", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.24",
    "pathspec>=1.0",
    "ruamel.yaml>=0.18",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sourcecode = "sourcecode.cli:main_entry"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.15",
    "mypy>=1.10",
]
ast = [
    "tree-sitter>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-javascript>=0.21",
]

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_typescript", "tree_sitter_javascript"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/sourcecode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x -q"

[tool.ruff]
extend-ignore = ["UP006", "UP007", "UP035"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tomllib", "tomli"]
ignore_missing_imports = true
